--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <a href="service.html" class="nav-item nav-link">Submarines</a>
                         <a href="project.html" class="nav-item nav-link">Playground</a>
                         <a href="contact.html" class="nav-item nav-link">Teleferic</a>
-                        <a href="contact.html" class="nav-item nav-link">Safari zoo </a>
+                        <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
                         <a href="contact.html" class="nav-item nav-link">Aqua park</a>
                         <a href="contact.html" class="nav-item nav-link">Ferris wheels</a>
                     </div>
