--- a/safari_zoo.html
+++ b/safari_zoo.html
@@ -84,12 +84,12 @@
                     <div class="navbar-nav">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">Indoor ski dome</a>
-                        <a href="service.html" class="nav-item nav-link">Submarines</a>
-                        <a href="project.html" class="nav-item nav-link">Playground</a>
+                        <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
+                        <a href="Playground.html" class="nav-item nav-link">Playground</a>
                         <a href="contact.html" class="nav-item nav-link">Teleferic</a>
                         <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
                         <a href="contact.html" class="nav-item nav-link">Aqua park</a>
-                        <a href="contact.html" class="nav-item nav-link">Ferris wheels</a>
+                        <a href="Ferris_wheels.html" class="nav-item nav-link">Ferris wheels</a>
                     </div>
                 </div>
             </nav>
@@ -234,6 +234,7 @@
                     </div>
                 </div>
 
+                <!-- ! VIdeos  -->
                 <div class="project-item mb-5" style="height: 300px;">
                     <div class="position-relative">
                         <img class="img-fluid"
@@ -246,6 +247,100 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-item mb-5" style="height: 300px;">
+                    <div class="position-relative">
+                        <img class="img-fluid"
+                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-2.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/qFi8j2aXXQs" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 300px;">
+                    <div class="position-relative">
+                        <img class="img-fluid"
+                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-3.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/5OUcIDrYvYw" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 300px;">
+                    <div class="position-relative">
+                        <img class="img-fluid"
+                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-5.jpeg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/EJBpQXMaFT4" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 300px;">
+                    <div class="position-relative">
+                        <img class="img-fluid"
+                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-6.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/WWE2Lfskt7Q" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 300px;">
+                    <div class="position-relative">
+                        <img class="img-fluid"
+                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-7.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/3hh7foST2dw" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 300px;">
+                    <div class="position-relative">
+                        <img class="img-fluid"
+                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-9.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/CvyHTtCKepM" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 300px;">
+                    <div class="position-relative">
+                        <img class="img-fluid"
+                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-4.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/EiXoLXbrPWA" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- End Videos -->
 
 
 
