--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                     <div class="navbar-nav">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">Indoor ski dome</a>
-                        <a href="service.html" class="nav-item nav-link">Submarines</a>
-                        <a href="project.html" class="nav-item nav-link">Playground</a>
+                        <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
+                        <a href="Playground.html" class="nav-item nav-link">Playground</a>
                         <a href="contact.html" class="nav-item nav-link">Teleferic</a>
                         <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
                         <a href="contact.html" class="nav-item nav-link">Aqua park</a>
-                        <a href="contact.html" class="nav-item nav-link">Ferris wheels</a>
+                        <a href="Ferris_wheels.html" class="nav-item nav-link">Ferris wheels</a>
                     </div>
                 </div>
             </nav>
