--- a/Submarines.html
+++ b/Submarines.html
@@ -101,7 +101,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid submarins-page-header page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-2 text-white mb-4 animated slideInDown">Safari zoo</h1>
+            <h1 class="display-2 text-white mb-4 animated slideInDown">Submarines</h1>
             <h2 class="text-white mb-4">Submarina is the exclusive agent of a Spanish company called Sopipor, which
                 specializes in the manufacture of submarines and luxury yachts</h2>
         </div>
