add playground sector

--- a/Ferris_wheels.html
+++ b/Ferris_wheels.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Safari Zoo</title>
+    <title>Ferris wheels</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -99,11 +99,13 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid safari-zoo-page-header page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid Ferris-wheels-page-header page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-2 text-white mb-4 animated slideInDown">Safari zoo</h1>
-            <h2 class="text-white mb-4">Is the exclusive agent for an Indonesian company called Caman Safari Zoo and a
-                Spanish company called Parque Madrid</h2>
+            <h1 class="display-2 text-white mb-4 animated slideInDown">Ferris wheels</h1>
+            <h2 class="text-white mb-4">Submarina has an exclusive agent with the Chinese company called <a
+                    href="https://www.jumarides.com/" target="_blank">Jinma Rides</a> and is the exclusive agent for <a
+                    href="https://www.technicalpark.com/" target="_blank">Technical Park</a></h2>
+
         </div>
     </div>
     <!-- Page Header End -->
@@ -111,136 +113,23 @@
 
 
 
-    <!-- Features Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium text-primary">Main Attractions</p>
-                <h1 class="display-5 mb-5">Discover Our Featured Shows</h1>
-            </div>
-
-            <div class="row g-0 feature-row">
-                <div class="col-md-6  sector-feature col-lg-4 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="feature-item border h-100 p-5">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <img class="img-fluid" src="img/Sectores/safari-zoo/icons/wild-animals.png" alt="Icon">
-                        </div>
-                        <h5 class="mb-3">Wild animals show</h5>
-                        <p class="mb-0">Engage in captivating adventures with our wild animals</p>
-                    </div>
-                </div>
-
-
-                <div class="col-md-6 sector-feature col-lg-4 wow fadeIn" data-wow-delay="0.3s">
-                    <div class="feature-item border h-100 p-5">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <img class="img-fluid" src="img/Sectores/safari-zoo/icons/horse.png" alt="Icon">
-                        </div>
-                        <h5 class="mb-3">Horse and Buffalo show</h5>
-                        <p class="mb-0">Enjoy family-friendly fun with our horse and buffalo show</p>
-                    </div>
-                </div>
-
-                <div class="col-md-6 sector-feature col-lg-4 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="feature-item border h-100 p-5">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <img class="img-fluid" src="img/Sectores/safari-zoo/icons/dolphin.png" alt="Icon">
-                        </div>
-                        <h5 class="mb-3">Dolphin show</h5>
-                        <p class="mb-0">Experience excitement with peace of mind - safety is our priority</p>
-                    </div>
-                </div>
-
-                <div class="col-md-6 sector-feature  col-lg-4 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="feature-item border h-100 p-5">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <img class="img-fluid" src="img/Sectores/safari-zoo/icons/parrot.png" alt="Icon">
-                        </div>
-                        <h5 class="mb-3">Birds show</h5>
-                        <p class="mb-0">Indulge in luxury with our exclusive VIP experiences</p>
-                    </div>
-                </div>
-
-
-                <div class="col-md-6 sector-feature col-lg-4 wow fadeIn " data-wow-delay="0.7s">
-                    <div class="feature-item border h-100 p-5">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <img class="img-fluid" src="img/Sectores/safari-zoo/icons/cowboy-hat.png" alt="Icon">
-                        </div>
-                        <h5 class="mb-3">Cowboy show</h5>
-                        <p class="mb-0">Indulge in luxury with our exclusive VIP experiences</p>
-                    </div>
-                </div>
-
-
-                <div class="col-md-6 sector-feature col-lg-4 wow fadeIn " data-wow-delay="0.7s">
-                    <div class="feature-item border h-100 p-5">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <img class="img-fluid" src="img/Sectores/safari-zoo/icons/elephant.png" alt="Icon">
-                        </div>
-                        <h5 class="mb-3">Elephant ride & show</h5>
-                        <p class="mb-0">Indulge in luxury with our exclusive VIP experiences/p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- Features End -->
-
-
 
     <!-- Project Start -->
     <div class="container-xxl pt-5">
         <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium text-primary">Safari Zoo Gallery</p>
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 450px;">
+                <p class="fs-5 fw-medium text-primary">Ferris wheels Gallery</p>
                 <h1 class="display-5 mb-5">Explore Our Photos and Videos</h1>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
 
-                <div class="project-item mb-5" style="height: 300px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/safari-zoo/sectors-sliders/safari-Zoo1.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/safari-zoo/sectors-sliders/safari-Zoo1.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="project-item mb-5" style="height: 300px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/safari-zoo/sectors-sliders/Safari-zoo3.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/safari-zoo/sectors-sliders/Safari-zoo3.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-item mb-5" style="height: 300px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/safari-zoo/sectors-sliders/Safari-zoo2.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/safari-zoo/sectors-sliders/Safari-zoo2.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-item mb-5" style="height: 300px;">
-                    <div class="position-relative">
-                        <img class="img-fluid"
-                            src="img/Sectores/safari-zoo/sectors-sliders/safari-zoo-video-cover-1.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Freeis-wheels/Ferris-wheels-5.jpg" alt="">
                         <div class="project-overlay">
                             <button type="button" class="btn-play" data-bs-toggle="modal"
-                                data-src="https://www.youtube.com/embed/S2xOLTGSH58" data-bs-target="#customVideoModal">
+                                data-src="https://www.youtube.com/embed/YG7uHKNgyRA" data-bs-target="#customVideoModal">
                                 <span></span>
                             </button>
                         </div>
@@ -248,23 +137,81 @@
                 </div>
 
 
-
-
-                <!-- <div class="project-item mb-5">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/project-4.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Freeis-wheels/Ferris-wheels-1.jpg" alt="">
                         <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1" href="img/project-4.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1" href=""><i
-                                    class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Freeis-wheels/Ferris-wheels-1.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
                         </div>
                     </div>
-                    <div class="p-4">
-                        <a class="d-block h5" href="">Social Marketing Strategy</a>
-                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem</span>
+                </div>
+
+
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Freeis-wheels/Ferris-wheels-7.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/T7imAHYiqQM" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
                     </div>
-                </div> -->
+                </div>
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Freeis-wheels/Ferris-wheels-2.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Freeis-wheels/Ferris-wheels-2.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Freeis-wheels/Ferris-wheels-3.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Freeis-wheels/Ferris-wheels-3.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Freeis-wheels/Ferris-wheels-4.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Freeis-wheels/Ferris-wheels-4.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Freeis-wheels/Ferris-wheels-6.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/RzYmxrqLdF0" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
 
 
             </div>
@@ -296,60 +243,6 @@
         </div>
     </div>
     <!-- Custom Video Modal End -->
-
-
-    <!-- Service Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium text-primary">Important Documents</p>
-                <h1 class="display-5 mb-5">Explore Our Essential Files</h1>
-            </div>
-            <div class="row g-4 d-flex justify-content-sm-around ">
-                <div class="col-lg-4 col-md-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item position-relative h-100">
-                        <div class="service-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-4"
-                                style="width: 64px; height: 64px;">
-                                <img class="img-fluid" src="img/Sectores/safari-zoo/icons/graph-presentation.png"
-                                    alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Feasibility study of types for Safari Zoo</h5>
-                        </div>
-                        <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-danger fw-medium"
-                                href="https://drive.google.com/file/d/1BrR0zJdI6U8DHmDoj6b6FUD9WFsdNXxF/view?usp=sharing"
-                                target="_blank" rel="noopener">Read More<i
-                                    class="bi bi-chevron-double-right ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item position-relative h-100">
-                        <div class="service-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-4"
-                                style="width: 64px; height: 64px;">
-                                <img class="img-fluid" src="img/Sectores/safari-zoo/icons/pdf.png" alt="Icon">
-                            </div>
-                            <h5 class="mb-3">Explanation for Winter Jungle Galaxy project</h5>
-                        </div>
-                        <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-danger fw-medium"
-                                href="https://drive.google.com/file/d/19DCDtg6eoRvc5JvDiGguB-aBjYshKqi2/view?usp=sharing"
-                                target="_blank" rel="noopener">Read More<i
-                                    class="bi bi-chevron-double-right ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-    <!-- Service End -->
-
-
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
