--- a/Submarines.html
+++ b/Submarines.html
@@ -194,10 +194,10 @@
 
                 <div class="project-item mb-5" style="height: 300px;">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/conventional-2.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/conventional .jpg" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/conventional-2.jpg"
+                                href="img/Sectores/Submarines/sectors-sliders/conventional .jpg"
                                 data-lightbox="project"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
@@ -207,10 +207,10 @@
 
                 <div class="project-item mb-5" style="height: 300px;">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/conventional-3.jpeg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/conventional-2.jpg" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/conventional-3.jpeg"
+                                href="img/Sectores/Submarines/sectors-sliders/conventional-2.jpg"
                                 data-lightbox="project"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
@@ -363,6 +363,71 @@
         </div>
     </div>
     <!-- sub Catamaran  End -->
+
+
+
+
+    <!-- parasailing Start -->
+    <div class="container-xxl pt-5">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="display-1 text-black  mb-4 animated slideInRight">parasailing </h1>
+            </div>
+            <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="project-item mb-5" style="height: 500px;">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-5.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/fOZ9dVcE0wE" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- parasailing  End -->
+
 
 
 
