--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Indoor ski dome</a>
+                        <a href="index.html" class="nav-item nav-link active fw-bolder ">SubMarina</a>
+                        <a href="Indoor_ski_dome.html" class="nav-item nav-link">Indoor ski dome</a>
                         <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
                         <a href="Playground.html" class="nav-item nav-link">Playground</a>
-                        <a href="contact.html" class="nav-item nav-link">Teleferic</a>
+                        <a href="Teleferik.html" class="nav-item nav-link">Teleferik</a>
                         <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
-                        <a href="contact.html" class="nav-item nav-link">Aqua park</a>
+                        <a href="Aqua_park.html" class="nav-item nav-link">Aqua park</a>
                         <a href="Ferris_wheels.html" class="nav-item nav-link">Ferris wheels</a>
                     </div>
                 </div>
@@ -839,13 +839,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="#indoor_ski">Indoor Ski Dome</a>
-                    <a class="btn btn-link" href="#submarines">Submarines</a>
-                    <a class="btn btn-link" href="#playground">Playground</a>
-                    <a class="btn btn-link" href="#aqua_park">Aqua Park</a>
-                    <a class="btn btn-link" href="#safari_zoo">Safari Zoo</a>
-                    <a class="btn btn-link" href="#teleferic">Teleferic</a>
-                    <a class="btn btn-link" href="#ferris_wheels">Ferris Wheels</a>
+                    <a href="index.html" class="btn btn-link">SubMarina</a>
+                    <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
+                    <a href="Submarines.html" class="btn btn-link">Submarines</a>
+                    <a href="Playground.html" class="btn btn-link">Playground</a>
+                    <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
+                    <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
+                    <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
+                    <a href="Ferris_wheels.html" class="btn btn-link">Ferris wheels</a>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
