--- a/Ferris_wheels.html
+++ b/Ferris_wheels.html
@@ -68,7 +68,6 @@
     </div>
     <!-- Topbar End -->
 
-
     <!-- Navbar Start -->
     <div class="container-fluid bg-white sticky-top">
         <div class="container">
@@ -82,14 +81,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Indoor ski dome</a>
-                        <a href="service.html" class="nav-item nav-link">Submarines</a>
-                        <a href="project.html" class="nav-item nav-link">Playground</a>
-                        <a href="contact.html" class="nav-item nav-link">Teleferic</a>
+                        <a href="index.html" class="nav-item nav-link active fw-bolder ">SubMarina</a>
+                        <a href="Indoor_ski_dome.html" class="nav-item nav-link">Indoor ski dome</a>
+                        <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
+                        <a href="Playground.html" class="nav-item nav-link">Playground</a>
+                        <a href="Teleferik.html" class="nav-item nav-link">Teleferik</a>
                         <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
-                        <a href="contact.html" class="nav-item nav-link">Aqua park</a>
-                        <a href="contact.html" class="nav-item nav-link">Ferris wheels</a>
+                        <a href="Aqua_park.html" class="nav-item nav-link">Aqua park</a>
+                        <a href="Ferris_wheels.html" class="nav-item nav-link">Ferris wheels</a>
                     </div>
                 </div>
             </nav>
@@ -245,7 +244,7 @@
     <!-- Custom Video Modal End -->
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark footer mt-5 py-2 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -266,12 +265,16 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a href="index.html" class="btn btn-link">SubMarina</a>
+                    <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
+                    <a href="Submarines.html" class="btn btn-link">Submarines</a>
+                    <a href="Playground.html" class="btn btn-link">Playground</a>
+                    <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
+                    <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
+                    <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
+                    <a href="Ferris_wheels.html" class="btn btn-link">Ferris wheels</a>
                 </div>
+
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Business Hours</h4>
                     <p class="mb-1">Monday - Friday</p>
@@ -295,24 +298,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
-
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="fw-medium text-light" href="#">Your Site Name</a>, All Right Reserved.
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="fw-medium text-light" href="https://htmlcodex.com">HTML Codex</a>
-                    Distributed By <a class="fw-medium text-light" href="https://themewagon.com">ThemeWagon</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copyright End -->
 
 
     <!-- Back to Top -->
