--- a/Submarines.html
+++ b/Submarines.html
@@ -82,13 +82,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Indoor ski dome</a>
+                        <a href="index.html" class="nav-item nav-link active fw-bolder ">SubMarina</a>
+                        <a href="Indoor_ski_dome.html" class="nav-item nav-link">Indoor ski dome</a>
                         <a href="Submarines.html" class="nav-item nav-link">Submarines</a>
                         <a href="Playground.html" class="nav-item nav-link">Playground</a>
-                        <a href="contact.html" class="nav-item nav-link">Teleferic</a>
+                        <a href="Teleferik.html" class="nav-item nav-link">Teleferik</a>
                         <a href="safari_zoo.html" class="nav-item nav-link">Safari zoo </a>
-                        <a href="contact.html" class="nav-item nav-link">Aqua park</a>
+                        <a href="Aqua_park.html" class="nav-item nav-link">Aqua park</a>
                         <a href="Ferris_wheels.html" class="nav-item nav-link">Ferris wheels</a>
                     </div>
                 </div>
@@ -96,6 +96,7 @@
         </div>
     </div>
     <!-- Navbar End -->
+
 
 
     <!-- Page Header Start -->
@@ -272,27 +273,14 @@
                     </div>
                 </div>
 
+                <!-- ! VIdeos  -->
                 <div class="project-item mb-5" style="height: 300px;">
                     <div class="position-relative">
                         <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Semi-Submarine-4.jpg"
                             alt="">
                         <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/Semi-Submarine-4.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- ! VIdeos  -->
-                <div class="project-item mb-5" style="height: 300px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Semi-Submarine-3.jpg"
-                            alt="">
-                        <div class="project-overlay">
                             <button type="button" class="btn-play" data-bs-toggle="modal"
-                                data-src="https://www.youtube.com/embed/fiMMs1dXO30" data-bs-target="#customVideoModal">
+                                data-src="https://www.youtube.com/embed/oOFKkxV97nc" data-bs-target="#customVideoModal">
                                 <span></span>
                             </button>
                         </div>
@@ -318,39 +306,40 @@
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
 
-                <div class="project-item mb-5" style="height: 300px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-1.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-1.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="project-item mb-5" style="height: 300px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-2.jpg" alt="">
-                        <div class="project-overlay">
-                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-2.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="project-item mb-5" style="height: 300px;">
-                    <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-4jpg.jpg"
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub Catamaran--1.jpg"
                             alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-4jpg.jpg"
+                                href="img/Sectores/Submarines/sectors-sliders/Sub Catamaran--1.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub Catamaran--2.jpg"
+                            alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/Sub Catamaran--2.jpg"
+                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/sub-Catamaran-3.jpg" alt="">
+                        <div class="project-overlay">
+                            <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                href="img/Sectores/Submarines/sectors-sliders/sub-Catamaran-3.jpg"
                                 data-lightbox="project"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
@@ -375,35 +364,35 @@
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
-                <div class="project-item mb-5" style="height: 500px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/parasailing-1.jpeg" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-2jpg.jpg"
+                                href="img/Sectores/Submarines/sectors-sliders/parasailing-1.jpeg"
                                 data-lightbox="project"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
 
 
-                <div class="project-item mb-5" style="height: 500px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/parasailing-2.jpg" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-3.jpg"
+                                href="img/Sectores/Submarines/sectors-sliders/parasailing-2.jpg"
                                 data-lightbox="project"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
 
-                <div class="project-item mb-5" style="height: 500px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/parasailing-3.jpg" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/glass-boat-4.jpg"
+                                href="img/Sectores/Submarines/sectors-sliders/parasailing-3.jpg"
                                 data-lightbox="project"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
@@ -411,18 +400,30 @@
 
 
 
-                <div class="project-item mb-5" style="height: 500px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-5.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/parasailing-4.jpg" alt="">
                         <div class="project-overlay">
                             <button type="button" class="btn-play" data-bs-toggle="modal"
-                                data-src="https://www.youtube.com/embed/fOZ9dVcE0wE" data-bs-target="#customVideoModal">
+                                data-src="https://www.youtube.com/embed/YmK-pncMfKU" data-bs-target="#customVideoModal">
                                 <span></span>
                             </button>
                         </div>
                     </div>
                 </div>
 
+
+                <div class="project-item mb-5">
+                    <div class="position-relative">
+                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/parasailing-5.jpg" alt="">
+                        <div class="project-overlay">
+                            <button type="button" class="btn-play" data-bs-toggle="modal"
+                                data-src="https://www.youtube.com/embed/oCkl0EY6ABU" data-bs-target="#customVideoModal">
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -481,7 +482,7 @@
                         <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/glass-boat-5.jpg" alt="">
                         <div class="project-overlay">
                             <button type="button" class="btn-play" data-bs-toggle="modal"
-                                data-src="https://www.youtube.com/embed/fOZ9dVcE0wE" data-bs-target="#customVideoModal">
+                                data-src="https://www.youtube.com/embed/Xym3HmpS4l8" data-bs-target="#customVideoModal">
                                 <span></span>
                             </button>
                         </div>
@@ -554,9 +555,8 @@
     <!-- Service End -->
 
 
-
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark footer mt-5 py-2 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -577,12 +577,16 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a href="index.html" class="btn btn-link">SubMarina</a>
+                    <a href="Indoor_ski_dome.html" class="btn btn-link">Indoor ski dome</a>
+                    <a href="Submarines.html" class="btn btn-link">Submarines</a>
+                    <a href="Playground.html" class="btn btn-link">Playground</a>
+                    <a href="Teleferik.html" class="btn btn-link">Teleferik</a>
+                    <a href="safari_zoo.html" class="btn btn-link">Safari zoo </a>
+                    <a href="Aqua_park.html" class="btn btn-link">Aqua park</a>
+                    <a href="Ferris_wheels.html" class="btn btn-link">Ferris wheels</a>
                 </div>
+
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Business Hours</h4>
                     <p class="mb-1">Monday - Friday</p>
@@ -606,24 +610,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
-
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="fw-medium text-light" href="#">Your Site Name</a>, All Right Reserved.
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="fw-medium text-light" href="https://htmlcodex.com">HTML Codex</a>
-                    Distributed By <a class="fw-medium text-light" href="https://themewagon.com">ThemeWagon</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copyright End -->
 
 
     <!-- Back to Top -->
